All the links with distributions

--- a/Graphs.ipynb
+++ b/Graphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "#Lectura Alternativa del DF\n",
-    "DF = pd.read_csv('./Results/Easth_Complete_trend_analysis.dat', sep = ' ')"
+    "DF = pd.read_csv('./Results/_South_Complete_trend_analysis.dat', sep = ' ')"
    ]
   },
   {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,168 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>median</th>\n",
-       "      <th>skew</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>Delta_t</th>\n",
-       "      <th>Delta_t</th>\n",
-       "      <th>Delta_t</th>\n",
-       "      <th>Delta_t</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Iteration</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>41776</th>\n",
-       "      <td>48.795543</td>\n",
-       "      <td>34.206090</td>\n",
-       "      <td>47.23360</td>\n",
-       "      <td>0.572021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3917</th>\n",
-       "      <td>48.762702</td>\n",
-       "      <td>34.354220</td>\n",
-       "      <td>43.31060</td>\n",
-       "      <td>0.494001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22375</th>\n",
-       "      <td>48.695789</td>\n",
-       "      <td>34.573736</td>\n",
-       "      <td>46.09990</td>\n",
-       "      <td>0.536267</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39964</th>\n",
-       "      <td>48.970215</td>\n",
-       "      <td>35.430696</td>\n",
-       "      <td>45.12685</td>\n",
-       "      <td>0.481503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20868</th>\n",
-       "      <td>48.807419</td>\n",
-       "      <td>35.865663</td>\n",
-       "      <td>45.43405</td>\n",
-       "      <td>0.413101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12651</th>\n",
-       "      <td>49.608199</td>\n",
-       "      <td>48.310906</td>\n",
-       "      <td>25.65035</td>\n",
-       "      <td>0.627390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19516</th>\n",
-       "      <td>49.980459</td>\n",
-       "      <td>48.470411</td>\n",
-       "      <td>28.75665</td>\n",
-       "      <td>0.520358</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13416</th>\n",
-       "      <td>48.746319</td>\n",
-       "      <td>48.700596</td>\n",
-       "      <td>21.72610</td>\n",
-       "      <td>0.656138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42192</th>\n",
-       "      <td>49.565934</td>\n",
-       "      <td>49.058915</td>\n",
-       "      <td>27.09530</td>\n",
-       "      <td>0.573055</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41680</th>\n",
-       "      <td>50.353119</td>\n",
-       "      <td>49.589835</td>\n",
-       "      <td>30.02620</td>\n",
-       "      <td>0.579763</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2732 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                mean        std    median      skew\n",
-       "             Delta_t    Delta_t   Delta_t   Delta_t\n",
-       "Iteration                                          \n",
-       "41776      48.795543  34.206090  47.23360  0.572021\n",
-       "3917       48.762702  34.354220  43.31060  0.494001\n",
-       "22375      48.695789  34.573736  46.09990  0.536267\n",
-       "39964      48.970215  35.430696  45.12685  0.481503\n",
-       "20868      48.807419  35.865663  45.43405  0.413101\n",
-       "...              ...        ...       ...       ...\n",
-       "12651      49.608199  48.310906  25.65035  0.627390\n",
-       "19516      49.980459  48.470411  28.75665  0.520358\n",
-       "13416      48.746319  48.700596  21.72610  0.656138\n",
-       "42192      49.565934  49.058915  27.09530  0.573055\n",
-       "41680      50.353119  49.589835  30.02620  0.579763\n",
-       "\n",
-       "[2732 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stats.sort_values(('std','Delta_t'))"
+    "stats.sort_values(('skew','Delta_t'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF_ = DF_[DF_.Iteration.isin([13028])]"
+    "DF_ = DF_[DF_.Iteration.isin([30308])]"
    ]
   },
   {
