Ajust all distributions

--- a/Graphs.ipynb
+++ b/Graphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,28 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -r Results\n",
+    "#!rm -r Results\n",
     "!g++ Proyect.cpp -o ICDF.out\n",
-    "!mkdir Results"
+    "#!mkdir Results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Estamos trabajando con los datos North\n",
+    "#Corremos la simulacion\n",
     "!./ICDF.out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DF.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +61,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration    24999.50000\n",
+      "#Autos         713.31544\n",
+      "dtype: float64\n",
+      "Iteration    14433.901067\n",
+      "#Autos          38.132459\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(DF.groupby('Iteration').max().reset_index()[['Iteration','#Autos']].mean())\n",
+    "print(DF.groupby('Iteration').max().reset_index()[['Iteration','#Autos']].std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "727    1411\n",
+       "754    1165\n",
+       "718    1158\n",
+       "703    1155\n",
+       "758    1086\n",
+       "       ... \n",
+       "755     332\n",
+       "694     330\n",
+       "780     324\n",
+       "791     318\n",
+       "698     280\n",
+       "Name: #Autos, Length: 88, dtype: int64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "DF.groupby('Iteration').max().reset_index()[['Iteration','#Autos']]['#Autos'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,11 +135,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>median</th>\n",
+       "      <th>skew</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Delta_t</th>\n",
+       "      <th>Delta_t</th>\n",
+       "      <th>Delta_t</th>\n",
+       "      <th>Delta_t</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iteration</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16987</th>\n",
+       "      <td>4.828496</td>\n",
+       "      <td>4.983881</td>\n",
+       "      <td>3.32906</td>\n",
+       "      <td>3.007494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16735</th>\n",
+       "      <td>4.828496</td>\n",
+       "      <td>4.983881</td>\n",
+       "      <td>3.32906</td>\n",
+       "      <td>3.007494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16736</th>\n",
+       "      <td>4.828496</td>\n",
+       "      <td>4.983881</td>\n",
+       "      <td>3.32906</td>\n",
+       "      <td>3.007494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16737</th>\n",
+       "      <td>4.828496</td>\n",
+       "      <td>4.983881</td>\n",
+       "      <td>3.32906</td>\n",
+       "      <td>3.007494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16738</th>\n",
+       "      <td>4.828496</td>\n",
+       "      <td>4.983881</td>\n",
+       "      <td>3.32906</td>\n",
+       "      <td>3.007494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13259</th>\n",
+       "      <td>4.831442</td>\n",
+       "      <td>6.444998</td>\n",
+       "      <td>3.31496</td>\n",
+       "      <td>7.231194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13260</th>\n",
+       "      <td>4.831442</td>\n",
+       "      <td>6.444998</td>\n",
+       "      <td>3.31496</td>\n",
+       "      <td>7.231194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13261</th>\n",
+       "      <td>4.831442</td>\n",
+       "      <td>6.444998</td>\n",
+       "      <td>3.31496</td>\n",
+       "      <td>7.231194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13237</th>\n",
+       "      <td>4.831442</td>\n",
+       "      <td>6.444998</td>\n",
+       "      <td>3.31496</td>\n",
+       "      <td>7.231194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12973</th>\n",
+       "      <td>4.831442</td>\n",
+       "      <td>6.444998</td>\n",
+       "      <td>3.31496</td>\n",
+       "      <td>7.231194</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1603 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               mean       std   median      skew\n",
+       "            Delta_t   Delta_t  Delta_t   Delta_t\n",
+       "Iteration                                       \n",
+       "16987      4.828496  4.983881  3.32906  3.007494\n",
+       "16735      4.828496  4.983881  3.32906  3.007494\n",
+       "16736      4.828496  4.983881  3.32906  3.007494\n",
+       "16737      4.828496  4.983881  3.32906  3.007494\n",
+       "16738      4.828496  4.983881  3.32906  3.007494\n",
+       "...             ...       ...      ...       ...\n",
+       "13259      4.831442  6.444998  3.31496  7.231194\n",
+       "13260      4.831442  6.444998  3.31496  7.231194\n",
+       "13261      4.831442  6.444998  3.31496  7.231194\n",
+       "13237      4.831442  6.444998  3.31496  7.231194\n",
+       "12973      4.831442  6.444998  3.31496  7.231194\n",
+       "\n",
+       "[1603 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "stats.sort_values(('skew','Delta_t'))"
+    "stats.sort_values(('std','Delta_t'))"
    ]
   },
   {
@@ -121,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF_ = DF_[DF_.Iteration.isin([30308])]"
+    "DF_ = DF_[DF_.Iteration.isin([25930])]"
    ]
   },
   {
