--- a/Graphs.ipynb
+++ b/Graphs.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "#Lectura Alternativa del DF\n",
-    "DF = pd.read_csv('./Results/_South_180_Complete_trend_analysis.dat', sep = ' ')"
+    "DF = pd.read_csv(r'C:\\Users\\Lenovo\\Desktop\\Proyecto estadistica\\Proyecto Estadistica\\Results\\_South_Complete_trend_analysis.dat', sep = ' ')"
    ]
   },
   {
